--- a/public/src/app/components/workout/workout.component.html
+++ b/public/src/app/components/workout/workout.component.html
@@ -14,7 +14,7 @@
           <h4 class="workout-details">{{ex.sets}} x {{ex.reps}}<span *ngIf="ex.lastWeightUsed !== 0">, {{ex.lastWeightUsed}} kg</span></h4>
         </div>
         <div class="workout-body">
-          <div *ngFor="let n of numbers[i]" class="circle-container"><div (click)="triggerTracker(ex.restingTime, i, n)" [ngClass]="{'done': checkSet(i,n)}" class="circle"></div></div>
+          <div *ngFor="let n of numbers[ex._id]" class="circle-container"><div (click)="triggerTracker(ex.restingTime, i, n)" [ngClass]="{'done': checkSet(i,n)}" class="circle"></div></div>
         </div>
         <div class="workout-footer">
           <p class="difficulty">{{ex.difficulty | capitalize }}</p>
@@ -26,7 +26,7 @@
       <button type="button" *ngIf="!allDone" class="btn btn-secondary">Finish</button>
       <button type="button" *ngIf="allDone" (click)="finish()" class="btn btn-secondary save-btn finish-btn">Finish</button>
       <button type="button" (click)="editWorkout()" class="btn btn-secondary save-btn">Edit workout</button>
-      <button type="button" (click)="checkAll()" class="btn btn-outline-secondary">Check all</button>
+      <button type="button" (click)="setAll()" class="btn btn-outline-secondary">Check all</button>
     </div>
   </div>
 </div>
